--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(SimulatePeaks)
 export(SummitHeatmap)
 export(miniplot)
+importFrom(ComplexHeatmap,Heatmap)
+importFrom(ComplexHeatmap,HeatmapAnnotation)
+importFrom(ComplexHeatmap,anno_text)
+importFrom(ComplexHeatmap,max_text_width)
 importFrom(GenomicRanges,elementMetadata)
 importFrom(GenomicRanges,end)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
@@ -11,7 +15,9 @@ importFrom(GenomicRanges,start)
 importFrom(GenomicRanges,strand)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rsubread,featureCounts)
+importFrom(circlize,colorRamp2)
 importFrom(data.table,data.table)
-importFrom(gplots,heatmap.2)
 importFrom(graphics,plot)
+importFrom(grid,gpar)
+importFrom(grid,unit)
 importFrom(utils,read.table)
