switched to chr11 only. corrected tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(csaw,windowCounts)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
 importFrom(data.table,data.table)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_smooth)
