--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(GCbias)
 export(SimulatePeaks)
 export(SummarizeHeatmaps)
 export(SummitHeatmap)
+export(plotTracks)
+importFrom(AnnotationDbi,select)
 importFrom(BSgenome,getSeq)
 importFrom(Biostrings,letterFrequency)
 importFrom(Biostrings,writeXStringSet)
@@ -17,6 +19,9 @@ importFrom(ComplexHeatmap,HeatmapAnnotation)
 importFrom(ComplexHeatmap,anno_lines)
 importFrom(ComplexHeatmap,anno_text)
 importFrom(ComplexHeatmap,max_text_width)
+importFrom(GenomicFeatures,exons)
+importFrom(GenomicFeatures,exonsBy)
+importFrom(GenomicFeatures,genes)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
 importFrom(GenomicRanges,"strand<-")
@@ -34,6 +39,10 @@ importFrom(IRanges,overlapsAny)
 importFrom(Rsubread,featureCounts)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(Sushi,SushiColors)
+importFrom(Sushi,labelgenome)
+importFrom(Sushi,plotBedgraph)
+importFrom(Sushi,plotGenes)
 importFrom(circlize,colorRamp2)
 importFrom(csaw,calculateCPM)
 importFrom(csaw,readParam)
@@ -41,6 +50,7 @@ importFrom(csaw,windowCounts)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
 importFrom(data.table,data.table)
+importFrom(dplyr,left_join)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
@@ -49,7 +59,10 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,vars)
+importFrom(graphics,axis)
 importFrom(graphics,lines)
+importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,smoothScatter)
 importFrom(grid,gpar)
@@ -63,12 +76,15 @@ importFrom(parallel,mclapply)
 importFrom(plyr,aaply)
 importFrom(plyr,laply)
 importFrom(reshape2,melt)
+importFrom(rtracklayer,import)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,loess)
 importFrom(stats,predict)
 importFrom(stats,qt)
 importFrom(stats,sd)
+importFrom(stringr,fixed)
+importFrom(stringr,str_detect)
 importFrom(tidyr,"%>%")
 importFrom(tidyr,pivot_longer)
 importFrom(tidyselect,contains)
