--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,vars)
+importFrom(ggplot2,ylab)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
@@ -76,10 +77,12 @@ importFrom(parallel,mclapply)
 importFrom(plyr,aaply)
 importFrom(plyr,laply)
 importFrom(reshape2,melt)
+importFrom(rlang,.data)
 importFrom(rtracklayer,import)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,loess)
+importFrom(stats,median)
 importFrom(stats,predict)
 importFrom(stats,qt)
 importFrom(stats,sd)
