--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,10 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Depends:
     GenomicRanges
 Imports:
-    data.table,
     Rsubread,
     ComplexHeatmap,
     circlize,
@@ -25,8 +24,6 @@ Imports:
     ggplot2,
     BSgenome,
     BSgenome.Mmusculus.UCSC.mm10,
-    TxDb.Mmusculus.UCSC.mm10.ensGene,
-    EnsDb.Mmusculus.v79,
     Biostrings,
     plyr,
     reshape2,
@@ -37,14 +34,17 @@ Imports:
     csaw,
     viridis,
     parallel,
-    Sushi,
     rtracklayer,
     stringr,
     dplyr,
     AnnotationDbi,
     KernSmooth,
     Cairo,
-    rlang
+    rlang,
+    data.table,
+    TxDb.Mmusculus.UCSC.mm10.ensGene,
+    EnsDb.Mmusculus.v79,
+    Sushi
 Suggests: 
     testthat,
     knitr,
