added DifferentialEnrichment function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(AnnotationHeatmap)
 export(CountPeakReads)
 export(CumulativePlots)
+export(DifferentialEnrichment)
 export(DrawSummitHeatmaps)
 export(FindMotifs)
 export(GCbias)
@@ -51,6 +52,8 @@ importFrom(data.table,":=")
 importFrom(data.table,.N)
 importFrom(data.table,data.table)
 importFrom(dplyr,left_join)
+importFrom(edgeR,DGEList)
+importFrom(edgeR,calcNormFactors)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
@@ -73,6 +76,12 @@ importFrom(grid,grid.rect)
 importFrom(grid,pushViewport)
 importFrom(grid,unit)
 importFrom(grid,upViewport)
+importFrom(limma,contrasts.fit)
+importFrom(limma,eBayes)
+importFrom(limma,lmFit)
+importFrom(limma,makeContrasts)
+importFrom(limma,topTable)
+importFrom(limma,voom)
 importFrom(parallel,mclapply)
 importFrom(plyr,laply)
 importFrom(reshape2,melt)
@@ -82,6 +91,7 @@ importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,loess)
 importFrom(stats,median)
+importFrom(stats,model.matrix)
 importFrom(stats,predict)
 importFrom(stats,qt)
 importFrom(stats,sd)
