--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends:
     GenomicRanges
 Imports:
@@ -46,7 +46,10 @@ Imports:
     data.table,
     TxDb.Mmusculus.UCSC.mm10.ensGene,
     EnsDb.Mmusculus.v79,
-    Sushi
+    Sushi,
+    edgeR,
+    limma,
+    stats
 Suggests: 
     testthat,
     knitr,
