Added check to remove genomic ranges with neagtive starts.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(plyr,laply)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rtracklayer,import)
+importFrom(stats,coef)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,loess)
