--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,9 @@ importFrom(GenomicRanges,start)
 importFrom(GenomicRanges,strand)
 importFrom(GenomicRanges,width)
 importFrom(IRanges,overlapsAny)
+importFrom(QuasR,alignmentStats)
+importFrom(QuasR,qAlign)
+importFrom(QuasR,qProfile)
 importFrom(Rsubread,featureCounts)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,rowRanges)
@@ -82,6 +85,7 @@ importFrom(limma,lmFit)
 importFrom(limma,makeContrasts)
 importFrom(limma,topTable)
 importFrom(limma,voom)
+importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(plyr,laply)
 importFrom(reshape2,melt)
