added QuasR option to CountPeakReads

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(GenomicRanges,width)
 importFrom(IRanges,overlapsAny)
 importFrom(QuasR,alignmentStats)
 importFrom(QuasR,qAlign)
+importFrom(QuasR,qCount)
 importFrom(QuasR,qProfile)
 importFrom(Rsubread,featureCounts)
 importFrom(SummarizedExperiment,assay)
