--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,12 @@ Authors@R:
            email = "michi@fmi.ch")
 Description: This package helps with ChIPseq or CLIPseq data analysis. You can use it to generate GC bias plots for your ChIPseq enrichments,shuffle peaks (or any other GRanges object) in the genome, 
     generate multiple sorted heatmaps of ChIPseq reads or genomic annotations (eg promoters) around peak summits (or the center of any other any GRanges object) or metaplots (cumulative plots) of 
-    enrichments around peak summits, and find motifs under peak summits.Calculating the (Input-normalized) number of reads under peaks and plotting tracks around a region (eg gene) of interest is also possible. 
+    enrichments around peak summits, and find motifs under peak summits.Calculating the (Input-normalized) number of reads under peaks is also possible. 
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Depends:
     GenomicRanges
 Imports:
