changed GCbias plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(ComplexHeatmap,Heatmap)
 importFrom(ComplexHeatmap,HeatmapAnnotation)
 importFrom(ComplexHeatmap,anno_lines)
 importFrom(ComplexHeatmap,anno_text)
+importFrom(ComplexHeatmap,ht_opt)
 importFrom(ComplexHeatmap,max_text_width)
 importFrom(GenomicRanges,"end<-")
 importFrom(GenomicRanges,"start<-")
