--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,12 +13,12 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Depends:
     GenomicRanges
 Imports:
     ComplexHeatmap,
-    circlize, 
+    circlize,
     Rsubread,
     grid,
     grDevices,
@@ -49,7 +49,11 @@ Imports:
     edgeR,
     limma,
     stats,
-    QuasR
+    QuasR,
+    zoo,
+    cowplot,
+    patchwork,
+    S4Vectors
 Suggests: 
     testthat,
     knitr,
