--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(GCbias)
 export(SimulatePeaks)
 export(SummarizeHeatmaps)
 export(SummitHeatmap)
+export(calcTracks)
+export(plotTracks)
 importFrom(BSgenome,getSeq)
 importFrom(Biostrings,letterFrequency)
 importFrom(Biostrings,writeXStringSet)
@@ -26,36 +28,61 @@ importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,elementMetadata)
 importFrom(GenomicRanges,end)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
+importFrom(GenomicRanges,promoters)
 importFrom(GenomicRanges,resize)
 importFrom(GenomicRanges,seqnames)
 importFrom(GenomicRanges,slidingWindows)
 importFrom(GenomicRanges,start)
 importFrom(GenomicRanges,strand)
+importFrom(GenomicRanges,terminators)
 importFrom(GenomicRanges,width)
+importFrom(IRanges,IRanges)
 importFrom(IRanges,overlapsAny)
+importFrom(IRanges,subsetByOverlaps)
 importFrom(QuasR,alignmentStats)
 importFrom(QuasR,qAlign)
 importFrom(QuasR,qCount)
 importFrom(QuasR,qProfile)
 importFrom(Rsubread,featureCounts)
+importFrom(S4Vectors,mcols)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(circlize,colorRamp2)
+importFrom(cowplot,theme_cowplot)
 importFrom(csaw,calculateCPM)
 importFrom(csaw,readParam)
 importFrom(csaw,windowCounts)
 importFrom(data.table,":=")
 importFrom(data.table,.N)
 importFrom(data.table,data.table)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,annotate)
+importFrom(ggplot2,arrow)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_area)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_smooth)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,vars)
 importFrom(ggplot2,ylab)
@@ -77,15 +104,19 @@ importFrom(limma,topTable)
 importFrom(limma,voom)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
+importFrom(patchwork,plot_layout)
+importFrom(patchwork,wrap_plots)
 importFrom(plyr,laply)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(rtracklayer,import.bw)
 importFrom(stats,coef)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,loess)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,qt)
 importFrom(stats,sd)
@@ -95,3 +126,4 @@ importFrom(tidyselect,contains)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
 importFrom(viridis,inferno)
+importFrom(zoo,rollmean)
